# git-vendor

./: .gitattributes  .gitignore  .gitvendors  .rules  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.config/: committed.toml  pre-commit.yaml  release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml  CI.yml  Lint.yml
crates/git-set-attr/: CHANGELOG.md  Cargo.toml  README.md
crates/git-set-attr/src/: exe.rs  lib.rs  main.rs
crates/git-vendor/: CHANGELOG.md  Cargo.toml  README.md
crates/git-vendor/src/: cli.rs  exe.rs  lib.rs  main.rs  tests.rs
crates/git-vendor/tests/: add_vendor.rs  commit_mode.rs  common.rs  fetch.rs  merge_vendor.rs  rm.rs  status.rs  track.rs  track_vendor_pattern.rs  vendor_trait.rs
docs/design/: git-vendor.md  plan-align-design-doc.md
plumbing/git-set-attr/: CHANGELOG.md  Cargo.toml  README.md
plumbing/git-set-attr/src/: cli.rs  exe.rs  lib.rs
src/: cli.rs  exe.rs  lib.rs  tests.rs
tests/: vendor_trait.rs
