[workspace]
resolver = "3"
members = [".", "plumbing/git-set-attr"]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
git2 = "0.20.4"
git_filter_tree = "0.1.0"


[package]
name = "git-vendor"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-vendor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
git-set-attr = { version = "0.0.0", path = "plumbing/git-set-attr" }
