[workspace]
resolver = "3"
members = [".", "crates/git-set-attr", "tmp/crates/git-filter-tree", "tmp/crates/git-rewrite"]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
git2 = "0.20.4"
globset = "0.4.18"
tempfile = "3"


[package]
name = "git-vendor"
version = "0.0.2"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-vendor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
git-set-attr = { version = "0.0.2", path = "crates/git-set-attr" }
tempfile.workspace = true
git-filter-tree = { version = "0.3.0", path = "tmp/crates/git-filter-tree" }
