[workspace]
resolver = "3"
members = ["crates/git-vendor", "crates/git-set-attr"]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
git2 = "0.20.4"
globset = "0.4.18"
tempfile = "3"
