[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package]
name = "git-set-attr"
version = "0.1.2"
description = "Set Git attributes via code, or from the command-line."
repository = "https://github.com/git-ents/git-vendor"
documentation = "https://docs.rs/git-set-attr"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-set-attr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
