[package]
name = "git-vendor"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-vendor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
git-set-attr = { version = "0.0.1", path = "../git-set-attr" }
tempfile.workspace = true
git-filter-tree = "0.3.0"
globset.workspace = true
