[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package]
name = "git-vendor"
version = "0.1.0"
description = "An in-source vendoring alternative to Git submodules and subtrees."
repository = "https://github.com/git-ents/git-vendor"
documentation = "https://docs.rs/git-vendor"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-vendor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
git-set-attr = { version = "0.1.0", path = "../git-set-attr" }
tempfile.workspace = true
git-filter-tree = "0.3.1"
globset.workspace = true
